[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.6", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.8.0"
warp = "0.3.0"
hyper = "0.14"
futures = "0.3"

[[bin]]
name = "rust"
path = "main.rs"
